homework week#5 1 replace gin with net/http 2 swagger 3 .env 4 logrus
